# ReliableDataTransfer

./: .gitignore  CMakeLists.txt  Error.h  Makefile  README.md  client.cpp  rdp.cpp  rdp.h  rdp_structures.h  server.cpp
examples/: CMakeLists.txt  simple_client.cpp  simple_server.cpp
include/libRDT/: rdt.h
src/: CMakeLists.txt  rdt.cpp  rdt_error.h  rdt_structures.h
